[package]
name = "fso2"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"

# json (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date time (required)
chrono = { version = "0.4", features = ["serde"] }

# logging (required)
log = "0.4"
fast_log="1.3"

# BigDecimal (optional)
bigdecimal = "0.2"

# rbatis, must maintain the same versions (required)
rbatis =  { version = "1.8.31" } 
rbatis-macro-driver = { version = "1.8.31" }