[package]
name = "fso2"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"
description = "Simple, lightweight directory index"
repository = "https://github.com/SphericalKat/fso2"
homepage = "https://github.com/SphericalKat/fso2"
license = "MIT/Apache-2.0"
keywords = ["directory", "index", "web"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
fast_log="1.3"
pretty_env_logger = "0.4.0"

bigdecimal = "0.2"

rbatis =  { version = "1.8.31" } 
rbatis-macro-driver = { version = "1.8.31" }

[badges]
maintenance = { status = "actively-developed" }