[package]
name = "fso2"
version = "0.1.0"
authors = ["SphericalKat <amolele@gmail.com>"]
edition = "2018"
description = "Simple, lightweight directory index"
repository = "https://github.com/SphericalKat/fso2"
homepage = "https://github.com/SphericalKat/fso2"
license = "MIT/Apache-2.0"
keywords = ["directory", "index", "web"]
readme = "README.md"

[dependencies]

# Rocket REST framework
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "uuid"] }
rocket_cors = "0.5.2"

# Logger
slog = "2.5.2"
slog-term = "2.6.0"

# General purpose dependencies
dotenv = "0.15.0"
anyhow = "1.0.32"
slog-async = "2.5.0"
askama = { version = "0.10.5", features = ["with-rocket"] }
askama_rocket = "0.10.0"
walkdir = "2.3.1"
